--- a/src/Styles/Components/sidebar.css
+++ b/src/Styles/Components/sidebar.css
@@ -2,7 +2,7 @@ aside.app-sidebar {
     position: fixed;
     height: 100%;
     padding: 32px 24px;
-    background: linear-gradient(329.54deg, #218380 0%, #73d2de 100%);
+    background: linear-gradient(329.54deg,  #d81159 0%,  #8f2d56 100%);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -18,7 +18,7 @@ aside.app-sidebar {
     width: 48px;
     height: 48px;
     border: 0;
-    background: #12AFCB;
+    background: #218380;
     border-radius: 16px;
     cursor: pointer;
     transition: background-color 0.2s;
