--- a/src/Styles/Pages/filmes.css
+++ b/src/Styles/Pages/filmes.css
@@ -15,13 +15,12 @@
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
 }
   
-.card h3 {
-    color: #4f2158;
+.card h3, .card p {
+    color: #d81159;
 }
 
 .card p{
     font-weight: 100;
-    color: #4f2158
 }
 
 .card img{
