--- a/src/Styles/Components/sidebar.css
+++ b/src/Styles/Components/sidebar.css
@@ -19,7 +19,7 @@ aside.app-sidebar {
     width: 48px;
     height: 48px;
     border: 0;
-    background: #218380;
+    background: #d00000;
     border-radius: 16px;
     cursor: pointer;
     transition: background-color 0.2s;
